k8s/quickstart.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: daml
  labels:
    name: daml
---
apiVersion: v1
kind: Service
metadata:
  name: quickstart-sandbox
  namespace: daml
  labels:
    app: quickstart-sandbox
    service: quickstart-sandbox
spec:
  type: ClusterIP
  selector:
    app: quickstart-sandbox
  ports:
    - name: ledger
      port: 6865
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: quickstart-json-api
  namespace: daml
  labels:
    app: quickstart-json-api
    service: quickstart-json-api
spec:
  type: ClusterIP
  selector:
    app: quickstart-json-api
  ports:
    - name: http
      port: 7575
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: quickstart-navigator
  namespace: daml
  labels:
    app: quickstart-navigator
    service: quickstart-navigator
spec:
  type: ClusterIP
  selector:
    app: quickstart-navigator
  ports:
    - name: http
      port: 4000
      protocol: TCP
---
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: quickstart-navigator
  namespace: daml
spec:
  host: quickstart-navigator
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quickstart-navigator-virtualservice
  namespace: daml
spec:
  gateways:
  - istio-system/ingressgateway
  - mesh
  hosts:
  - quickstart.daml.darkedges.com
  http:
  - route:
    - destination:
        host: quickstart-navigator
    corsPolicy:
      allowOrigin:
      - https://quickstart.daml.darkedges.com
      allowMethods:
      - POST
      - GET
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - authorization
      - content-type
      maxAge: "24h"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quickstart-api-virtualservice
  namespace: daml
spec:
  gateways:
  - istio-system/ingressgateway
  - mesh
  hosts:
  - quickstart-api.daml.darkedges.com
  http:
  - route:
    - destination:
        host: quickstart-json-api
    corsPolicy:
      allowOrigin:
      - https://quickstart.daml.darkedges.com
      allowMethods:
      - POST
      - GET
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - authorization
      - content-type
      maxAge: "24h"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-sandbox
  namespace: daml
spec:
  selector:
    matchLabels:
      app: quickstart-sandbox
  replicas: 1
  template:
    metadata:
      labels:
        app: quickstart-sandbox
    spec:
      containers:
      - name: quickstart
        image: darkedges/daml-quickstart:0.0.1
        imagePullPolicy: IfNotPresent
        command:
            - /usr/bin/docker-entrypoint.sh
            - sandbox
        ports:
        - containerPort: 6865
        readinessProbe:
          tcpSocket:
            port: 6865
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 6865
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-navigator
  namespace: daml
spec:
  selector:
    matchLabels:
      app: quickstart-navigator
  replicas: 1
  template:
    metadata:
      labels:
        app: quickstart-navigator
    spec:
      serviceAccountName: damlserviceaccount
      containers:
      - name: quickstart
        image: darkedges/daml-quickstart:0.0.1
        imagePullPolicy: IfNotPresent
        command:
            - /usr/bin/docker-entrypoint.sh
            - navigator
        ports:
        - containerPort: 4000
        readinessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart-json-api
  namespace: daml
spec:
  selector:
    matchLabels:
      app: quickstart-json-api
  replicas: 1
  template:
    metadata:
      labels:
        app: quickstart-json-api
    spec:
      serviceAccountName: damlserviceaccount
      containers:
      - name: quickstart
        image: darkedges/daml-quickstart:0.0.1
        imagePullPolicy: IfNotPresent
        command:
            - /usr/bin/docker-entrypoint.sh
            - jsonapi
        ports:
        - containerPort: 7575
        readinessProbe:
          tcpSocket:
            port: 7575
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 7575
          initialDelaySeconds: 10
          periodSeconds: 10
